[package]
name = "groupme_hvz_rs"
version = "0.0.3-alpha"
authors = ["Milo Mirate <mmirate@gmx.com>"]

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2"
cookie = { version = "^0.10", features = ["percent-encode"] }
ctrlc = { version = "^3", features = ["termination"] }
error-chain = "^0.11"
gotham = "0.2.0"
hyper = "0.11.21"
image = "^0.18"
itertools = "^0.7"
lazy_static = "^1"
mime = "0.3.5"
postgres = { version = "^0.15", features = ["with-native-tls", "with-serde_json"] }
rand = "^0.4"
regex = "^0.2"
reqwest = "^0.8"
rusttype = "^0.4"
scraper = "^0.5"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
static_slice = "^0.0.3"
strum = "^0.8"
strum_macros = "^0.8"
url = "^1.2.0"
uuid = { version = "^0.6", features = ["serde", "v4"] }
